			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Allow for errornous parse_url('http://2004.bloggies.com/', X).
    Anjo Anjewierden.


VERSION 5.5.7 (Februari 21, 2005)
=================================

  * ADDED: wide-character support for '$apropos_match'/2.

  * FIXED: Serious error in saved states dealing with multifile predicates
    and modules.  Jocelyn Paine.

  * FIXED: Possible deadlock in set_prolog_flag/2.

  * ADDED: Various new predicates to the ordsets compatibility library,
    used for the new CHR version.
   
  * ENHANCED: Provide better error context.  Suggested by Paulo Moura.

  * FIXED: library(readutil): complete dispatch of options. Wim Delvaux.


VERSION 5.5.6 (Februari 11, 2005)
=================================

  * ADDED: library(unicode/unicode_data), providing access to the official
    UNICODE data files (UnicodeData.txt, UCD).

  * FIXED: Bug#16: plwin.exe: having DISPLAY defined removes the menu.
    Richard Cheek.

  * FIXED: write_term/3: honour portray(true), numbervars(false) not to
    number the variables.

  * PORT: documented Linux-threads vs. NPTL issues.  Notably affects
    per-thread or per-process statistics.

  * FIXED: Bug#13: typo prevents building.  Jack Woehr.

  * PORT: Add LDFLAGS for building shared object (Paulo Moura,
    Gregory Wright)

  * ENHANCED: Change Prolog integers to be 64-bit on all platforms.  Also
    some critial sizes have been changed to 64-bit.  Consequences:

	* Foreign code using IOSTREAM (SWI-Stream.h) must be recompiled
          (i.e. source but no binary compatibility).
	* Code using PL_get_int() or PL_get_long() must be aware these
   	  can return FALSE, even if the value is a Prolog integer.  The